api-gateway config update

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -24,6 +24,8 @@ info:
     name: ${spring.application.name}
 
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
   client:
     registerWithEureka: true
     fetchRegistry: true
