--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -31,6 +31,7 @@ management:
         include: '*'
 eureka:
   instance:
+    hostname: localhost
     instance-id: ${spring.application.name}:${random.uuid}
   client:
     registerWithEureka: true
