--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  port: 8002
 
 spring:
   application:
@@ -29,13 +29,3 @@ management:
     web:
       exposure:
         include: '*'
-eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${random.uuid}
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
