--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -1,9 +1,9 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  port: 8001
 
 spring:
   application:
-    name: movie-service
+    name: movie-service-parcial
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -30,11 +30,3 @@ management:
     web:
       exposure:
         include: '*'
-eureka:
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceURL:
-      defaultZone: http://localhost:8761/eureka
