--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -33,3 +33,8 @@ management:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /swagger-ui.html
