--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -10,14 +10,11 @@ spring:
         locator:
           enabled: true
       routes:
-#         - id: catalog-service-parcial
-#           uri: lb://catalog-service-parcial
-#           predicates:
-#             - Path=/catalog/**
-        - id: movie-service-parcial
-          uri: lb://movie-service-parcial
+        - id: catalog-service-parcial
+          uri: lb://catalog-service-parcial
           predicates:
-            - Path=/movies/**
+            - Path=/catalog/**
+
 
 info:
   app:
