--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -4,11 +4,11 @@ server:
 spring:
   application:
     name: movie-service-parcial
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: sa
+   datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/movie-dev
+    username: admin2023
+    password: admin2023
   jpa:
     open-in-view: false
     show-sql: true
@@ -18,10 +18,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#   h2:
+#     console:
+#       enabled: true
+#       path: /h2-console
 
 message: hello from movie-service
 
