--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -4,7 +4,7 @@ server:
 spring:
   application:
     name: movie-service-parcial
-   datasource:
+  datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie-dev
     username: admin2023
@@ -16,12 +16,8 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
-#   h2:
-#     console:
-#       enabled: true
-#       path: /h2-console
 
 message: hello from movie-service
 
@@ -33,4 +29,8 @@ management:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
-
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /swagger-ui.html
