--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie-dev
-    username: admin23
-    password: admin23
+    username: admin
+    password: admin
   jpa:
     open-in-view: false
     show-sql: true
