--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie-dev
-    username: admin
+    username: root
     password: admin
   jpa:
     open-in-view: false
