--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -22,7 +22,9 @@ spring:
           uri: lb://serie-service-parcial
           predicates:
             - Path=/series/**              
-
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
 
 info:
   app:
