--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -18,6 +18,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true        
 
 message: hello from movie-service
 
