--- a/serie-service-parcial.yml
+++ b/serie-service-parcial.yml
@@ -16,3 +16,6 @@ management:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true    
