--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -17,6 +17,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true        
 
 message: hello from catalog-service
 
