--- a/serie-service-parcial.yml
+++ b/serie-service-parcial.yml
@@ -9,7 +9,7 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      database: test
+      database: Series
       port: 27017
 management:
   endpoints:
