--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -4,19 +4,14 @@ server:
 spring:
   application:
     name: catalog-service-parcial
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: sa
-  jpa:
-    open-in-view: false
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
+    
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: catalogo
+      port: 27018
   zipkin:
     base-url: http://localhost:9411/
     enabled: true        
