--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -9,7 +9,7 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      database: catalogo
+      database: test
       port: 27018
   zipkin:
     base-url: http://localhost:9411/
