--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -11,7 +11,7 @@ spring:
     mongodb:
       database: test
       port: 27017
-      host: '${MONGO_HOST}'
+      host: localhost
       authentication-database: admin
       
   zipkin:
