--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -10,9 +10,9 @@ spring:
   data:
     mongodb:
       database: test
-      port: 27017
       host: localhost
-      authentication-database: admin
+      port: 27017
+      database: catalog
       
   zipkin:
     base-url: http://localhost:9411/
