--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -10,10 +10,17 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      database: Catalog
-      port: 27017
-      host: localhost
-      authentication-database: admin
+      database: Series
+      port: 27017    
+#   mongodb:
+#     embedded:
+#       version: 4.0.2
+#   data:
+#     mongodb:
+#       database: Catalog
+#       port: 27017
+#       host: localhost
+#       authentication-database: admin
       
   zipkin:
     base-url: http://localhost:9411/
