--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -5,15 +5,18 @@ server:
 spring:
   application:
     name: catalog-service-parcial
-  mongodb:
-    embedded:
-      version: 4.0.2
   data:
     mongodb:
-      database: Series
-      port: 27017
-      host: localhost
-      authentication-database: admin      
+      uri: mongodb://127.0.0.1:27017/Catalog  
+#   mongodb:
+#     embedded:
+#       version: 4.0.2
+#   data:
+#     mongodb:
+#       database: Series
+#       port: 27017
+#       host: localhost
+#       authentication-database: admin      
 #   mongodb:
 #     embedded:
 #       version: 4.0.2
