--- a/catalog-service-parcial.yml
+++ b/catalog-service-parcial.yml
@@ -2,7 +2,7 @@ server:
   port: '${PORT:${SERVER_PORT:0}}'
 spring:
   application:
-    name: serie-service-parcial
+    name: catalog-service-parcial
   zipkin:
     base-url: 'http://localhost:9411/'
     enabled: true
