--- a/movie-service-parcial.yml
+++ b/movie-service-parcial.yml
@@ -1,12 +1,11 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
-
+  port: '${PORT:${SERVER_PORT:0}}'
 spring:
   application:
     name: movie-service-parcial
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movie-dev
+    url: 'jdbc:mysql://localhost:3306/movie-dev'
     username: root
     password: admin
   jpa:
@@ -19,11 +18,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
   zipkin:
-    base-url: http://localhost:9411/
-    enabled: true        
-
+    base-url: 'http://localhost:9411/'
+    enabled: true
 message: hello from movie-service
-
 management:
   endpoints:
     web:
@@ -31,9 +28,12 @@ management:
         include: '*'
 eureka:
   instance:
-    instance-id: ${spring.application.name}:${random.uuid}
-springfox:
-  documentation:
-    swagger:
-      v2:
-        path: /swagger-ui.html
+    instance-id: '${spring.application.name}:${random.uuid}'
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+queue:
+  movie:
+    name: NewMovie
